<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pfp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/circle" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/pfp">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Ruben12gg.exe"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="34dp"
            android:layout_toEndOf="@+id/userName"
            android:background="@drawable/logout" />


        <TextView
            android:id="@+id/txtAnime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/animes"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/animeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAnime"
            android:layout_centerHorizontal="true"
            android:text="0" />


    </RelativeLayout>


    <TextView
        android:id="@id/collections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pfp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="64dp"
        android:text="@string/collections"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/collections"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        android:background="@color/purple"
        tools:ignore="InvalidId" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_below="@id/bar"
        android:layout_marginBottom="55dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/collections"
            android:layout_marginTop="4dp">


            <TextView
                android:id="@+id/seenFrame"
                android:layout_width="128dp"
                android:layout_height="180dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/box" />

            <ImageButton
                android:id="@+id/seen"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="53dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/seen"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="78dp"
                android:layout_marginTop="22dp"
                android:text="@string/seenPf"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/toWatchFrame"
                android:layout_width="128dp"
                android:layout_height="180dp"
                android:layout_marginStart="212dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/box" />

            <ImageButton
                android:id="@+id/toWatch"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginStart="226dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/towatch"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="232dp"
                android:layout_marginTop="22dp"
                android:text="@string/toWatchPf"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/likedFrame"
                android:layout_width="128dp"
                android:layout_height="180dp"
                android:layout_below="@+id/seenFrame"
                android:layout_marginStart="40dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/box" />

            <ImageButton
                android:id="@+id/like"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="265dp"
                android:background="@drawable/like"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="78dp"
                android:layout_marginTop="230dp"
                android:text="@string/likedPf"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="128dp"
                android:layout_height="180dp"
                android:layout_below="@+id/toWatchFrame"
                android:layout_marginStart="212dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/box" />

            <ImageButton
                android:id="@+id/dislike"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_below="@+id/toWatchFrame"
                android:layout_marginStart="225dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/dislike"
                android:rotationY="180"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="238dp"
                android:layout_marginTop="230dp"
                android:text="@string/dislikedPf"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </RelativeLayout>


    </ScrollView>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:menu="@menu/bottom_navigation_menu" />
    </FrameLayout>

</RelativeLayout>